# linuxtips-dundie-rewards

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  conftest.py  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: main.yml
assets/: database.db  database.json  people.csv
docs/: how_to_install.md  index.md  roadmap.md
dundie/: VERSION.txt  __main__.py  cli.py  core.py  database.py  models.py  settings.py
dundie/utils/: auth.py  db.py  email.py  errors.py  exchange.py  log.py  user.py
integration/: conftest.py  constants.py  test_load.py
migrations/versions/: 792aa52e10ec_adicionando_o_campo_currency_em_person.py  9fbab9193efc_initial.py
requirements/: requirements.dev.txt  requirements.test.txt  requirements.txt
tests/: conftest.py  constants.py  test_add.py  test_database.py  test_load.py  test_read.py  test_utils.py
tests/assets/: people.csv
