[project]
name = "giovannipad-dundie"
description = "Reward point system for Dunder Mifflin"
authors = [
  {name = "Giovanni Padilha", email = "giovannipdlh@gmail.com"}
]
requires-python = ">=3.13"
license = {text = "MIT"}
dynamic = ["version", "readme", "dependencies"]

[project.urls]
Homepage = 'dundermifflin.com'
Source = 'https://github.com/GiovanniPad/linuxtips-dundie-rewards'

[project.scripts]
dundie = "dundie:__main__.main"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dundie" ]

[tool.setuptools.dynamic]
readme = {file = ["README.md", "docs/how_to_install.md"]}
dependencies = {file = "requirements/requirements.txt"}

[tool.setuptools_scm]
write_to = "dundie/VERSION.txt"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -vv"
testpaths = [
    "tests",
    "integration",
]
markers = [
  "unit: Mark unit tests",
  "integration: Mark integration tests",
  "high: High Priority",
  "medium: Medium Priority",
  "low: Low Priority",
]

[tool.flake8]
exclude = [".venv", "build", "migrations"]
max-line-length = 79

[tool.black]
line-length = 79
target-version = ["py36", "py37"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | _build
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
skip=["migrations"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79